# Pomodoro

./: .gitignore  Makefile  alembic.ini  dependency.py  docker-compose.yml  exception.py  fixtures.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 24e2d70de2f6_init.py  2a986394d015_debug_model_name_pwd.py  5dd1012f1731_init.py  5ff4cbc374d7_drop_access_token_frm_user_profile.py  74deb4fd4092_edit_access_token_property.py  a558efa72e3e_add_user_id_in_task.py  aed215ee853e_add_new.py  be1abcd26c8e_delete_comment.py  cd46ec5b6151_add_access_token_yandex.py  e429673234df_feature_google_auth.py  fe4bca099b9b_add_comment.py
cache/: accessor.py
client/: google.py  yadnex.py
database/: __init__.py  accessor.py  database.py  model.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  users.py
models/: __init__.py  tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
